Configure dependencyUpdate plugin

--- a/build.gradle
+++ b/build.gradle
@@ -152,3 +152,15 @@ project.tasks.getByPath('natlint:test').dependsOn(project.tasks.getByPath('natpa
 project.tasks['sonarqube'].dependsOn cover
 project.tasks['cover'].dependsOn spotlessJava
 project.tasks['cover'].dependsOn spotlessGradle
+
+def isNonStable = { String version ->
+  def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+  def regex = /^[0-9,.v-]+(-r)?$/
+  return !stableKeyword && !(version ==~ regex)
+}
+
+tasks.named("dependencyUpdates").configure {
+  rejectVersionIf {
+    isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
+  }
+}
