Create dedicated library for code generation (#625)
closes #532

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ ext {
 	libraries = [
 		// Implementation
 		guava : 'com.google.guava:guava:33.4.8-jre',
+		gson : 'com.google.code.gson:gson:2.13.2',
 		lsp4j : 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0',
 		dom4j : 'org.dom4j:dom4j:2.2.0',
 		slf4j_api	: "org.slf4j:slf4j-api:${SLF4J_VERSION}",
@@ -151,3 +152,15 @@ project.tasks.getByPath('natlint:test').dependsOn(project.tasks.getByPath('natpa
 project.tasks['sonarqube'].dependsOn cover
 project.tasks['cover'].dependsOn spotlessJava
 project.tasks['cover'].dependsOn spotlessGradle
+
+def isNonStable = { String version ->
+  def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+  def regex = /^[0-9,.v-]+(-r)?$/
+  return !stableKeyword && !(version ==~ regex)
+}
+
+tasks.named("dependencyUpdates").configure {
+  rejectVersionIf {
+    isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
+  }
+}
