--- a/libs/natgen/build.gradle
+++ b/libs/natgen/build.gradle
@@ -23,7 +23,7 @@ jar {
 tasks.register('fatJar', Jar) {
     manifest {
         attributes(
-                'Main-Class': 'org.amshove.natgen.App',
+                'Main-Class': 'org.amshove.natgen.NatGen',
                 'Implementation-Title': project.name,
                 'Implementation-Version': project.version
         )
